# MonteWalk

./: .gitignore  ALPACA_SETUP.md  API_REFERENCE.md  AUDIT_REPORT.md  NEWSAPI_SETUP.md  README.md  app.py  pyproject.toml  server.py
resources/: algo_trading_cheat_sheet.md  classic_papers_summary.md  risk_management_checklist.md
tools/: alpaca_broker.py  backtesting.py  execution.py  logger.py  market_data.py  news_intelligence.py  portfolio_optimizer.py  risk_engine.py  watchlist.py
