[project]
name = "montewalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "yfinance",
    "pandas",
    "numpy",
    "scipy",
    "pandas_ta",
    "textblob",
    "gnews",
    "newsapi-python",
    "pycoingecko",
    "alpaca-py",
    "gradio[mcp,oauth]==6.0.0.dev4",
    "python-dotenv",
]
